Some code enhancements detected with SonarLint